--- a/assets/style/scss/keyboard-style/_keyboard.scss
+++ b/assets/style/scss/keyboard-style/_keyboard.scss
@@ -1,10 +1,127 @@
-.keyboard__keycap{
-    width: 36px;
-    height: 36px;
-    background-color:gray;
-    color:blanchedalmond;
-    border-radius: 5px;
+.keyboard{
+    position: relative;
+    // background-color:bisque;
+    box-shadow: 0 0 50px rgba(0,0,0, 0.5);
+    user-select: none;
+    transition:bottom 0.4s;
+    width: 750px;
+    // height: 250px;
+    height: fit-content;
+    margin-inline: auto;
+    border-radius: 10px;
+    padding: 2px;
+
+    &__keycap{
+        text-align: center;
+    }
+    &__key{
+        position: relative;
+        width: 40px;
+        // width: 6%;
+        height: 36px;
+        margin: 4px;
+        border-radius: 4px;
+        border: none;
+        color:blanchedalmond;
+        background-color:gray;
+        font-size: 1.10rem;
+        outline: none; // remove outline on mobile device when touch the key or keyboard.
+        cursor: pointer;
+        vertical-align: top;
+        // padding: 0;
+        // -webkit-tap-highlight-color: transparent;
+
+        &:active{
+            background-color:blue;
+        }
+    }
+}
+
+// modified selectors
+
+.special{
+    position: relative;
+        width: 40px;
+        // width: 6%;
+        height: 36px;
+        margin: 4px;
+        border-radius: 4px;
+        border: none;
+        color:blanchedalmond;
+        background-color:gray;
+        font-size: 1.10rem;
+        outline: none; // remove outline on mobile device when touch the key or keyboard.
+        cursor: pointer;
+        vertical-align: top;
+}
+
+.material-icons--backspace{
     display: flex;
-    align-items: center;
     justify-content: center;
 }
+.special__key--space{
+    width: 40%;
+}
+.special__key--backspace{
+    width:fit-content;
+}
+.special__key--enter{
+    width:fit-content;
+    width: 88px;
+}
+.special__key--del{
+    width:fit-content;
+    width: 48px;
+}
+.special__key--capslock{
+    width:96px;
+}
+.special__key--capslock-off::after{
+    position: absolute;
+    top: 2px;
+    left: 48px;
+    content: "";
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color:blanchedalmond;
+}
+.special__key--capslock-on::after{
+    background-color:#e70d2a;
+}
+.special__key--left-shift{
+    width:96px;
+}
+.special__key--shift-right{
+    width: 40px;
+    font-size: 16px;
+}
+.special__key--ctrl{
+    width:58px;
+}
+
+// add class in advance in case user want to hiddem keyboard
+.keyboard--hidden{
+    left: -120%;
+}
+.btn-active{
+    background-color: darkcyan;
+}
+
+
+
+
+
+
+
+
+// .keyboard__keycap{
+//     width: 36px;
+//     height: 36px;
+//     background-color:gray;
+//     color:blanchedalmond;
+//     border-radius: 5px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+// }
