--- a/assets/style/scss/textarea/_textarea.scss
+++ b/assets/style/scss/textarea/_textarea.scss
@@ -5,6 +5,7 @@
 
 .textarea__style{
     background-color: rgb(87, 240, 245);
+    background-color: white;
     width: 80%;
     height: 150px;
     // margin-inline: auto;
