--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,17 +10,128 @@
 
 .textarea__style {
   background-color: rgb(87, 240, 245);
+  background-color: white;
   width: 80%;
   height: 150px;
 }
 
+.keyboard {
+  position: relative;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  transition: bottom 0.4s;
+  width: 750px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-inline: auto;
+  border-radius: 10px;
+  padding: 2px;
+}
 .keyboard__keycap {
-  width: 36px;
+  text-align: center;
+}
+.keyboard__key {
+  position: relative;
+  width: 40px;
   height: 36px;
-  background-color: gray;
+  margin: 4px;
+  border-radius: 4px;
+  border: none;
   color: blanchedalmond;
-  border-radius: 5px;
+  background-color: gray;
+  font-size: 1.1rem;
+  outline: none;
+  cursor: pointer;
+  vertical-align: top;
+}
+.keyboard__key:active {
+  background-color: blue;
+}
+
+.special {
+  position: relative;
+  width: 40px;
+  height: 36px;
+  margin: 4px;
+  border-radius: 4px;
+  border: none;
+  color: blanchedalmond;
+  background-color: gray;
+  font-size: 1.1rem;
+  outline: none;
+  cursor: pointer;
+  vertical-align: top;
+}
+
+.material-icons--backspace {
   display: flex;
-  align-items: center;
   justify-content: center;
+}
+
+.special__key--space {
+  width: 40%;
+}
+
+.special__key--backspace {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.special__key--enter {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  width: 88px;
+}
+
+.special__key--del {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  width: 48px;
+}
+
+.special__key--capslock {
+  width: 96px;
+}
+
+.special__key--capslock-off::after {
+  position: absolute;
+  top: 2px;
+  left: 48px;
+  content: "";
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: blanchedalmond;
+}
+
+.special__key--capslock-on::after {
+  background-color: #e70d2a;
+}
+
+.special__key--left-shift {
+  width: 96px;
+}
+
+.special__key--shift-right {
+  width: 40px;
+  font-size: 16px;
+}
+
+.special__key--ctrl {
+  width: 58px;
+}
+
+.keyboard--hidden {
+  left: -120%;
+}
+
+.btn-active {
+  background-color: darkcyan;
 }/*# sourceMappingURL=style.css.map */
